Add media content mosaic pattern

--- a/media.html
+++ b/media.html
@@ -53,9 +53,271 @@
 
     <!-- Media content -->
     <div class="content media">
-        <h1>
-            Nothing to show here <span class="brarsYellow">at the moment</span>
-        </h1>
+        <h2>Videos</h2>
+        <!-- Three independent columns. Place video items inside each column as standalone components. -->
+        <div class="columns">
+            <div class="column">
+
+                <div class="media-item small">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="0U-TN4yG2RM" data-poster="./videos/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" aria-label="Play Mo'Momo! - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" alt="Mo'Momo! poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Mo'Momo! - Palatset Feb 25</p>
+                </div>
+
+                <div class="media-item small">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="ozGTCcqiwdQ" data-poster="./videos/PalatsetFeb25/HalfwayToHudsonPalatsetFeb25.jpg" aria-label="Play Halfway To Hudson - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/HalfwayToHudsonPalatsetFeb25.jpg" alt="Halfway To Hudson poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Halfway To Hudson - Palatset Feb 25</p>
+                </div>
+
+                <div class="media-item large">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="ety-yMrYuY0" data-poster="./videos/PalatsetFeb25/LoneDiggerMemoriesPalatsetFeb25.jpg" aria-label="Play Lone Digger / Memories - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/LoneDiggerMemoriesPalatsetFeb25.jpg" alt="Lone Digger / Memories poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Lone Digger / Memories - Palatset Feb 25</p>
+                </div>
+            </div>
+
+            <div class="column">
+
+                <div class="media-item vertical">
+                    <div class="yt-card vertical" role="button" tabindex="0" data-ytid="_oOipx9tCUk" data-poster="./videos/Kulturnatten25/danceKulturnatten25.jpg" aria-label="Play Dance With Somebody - Kulturnatten 25">
+                        <img src="./videos/Kulturnatten25/danceKulturnatten25.jpg" alt="Dance With Somebody poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Dance With Somebody - Kulturnatten 25</p>
+                </div>
+
+                <div class="media-item small">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="Y4drlQcgiro" data-poster="./videos/PalatsetFeb25/KidsPalatsetFeb25.jpg" aria-label="Play Kids - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/KidsPalatsetFeb25.jpg" alt="Kids poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Kids - Palatset Feb 25</p>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="media-item medium">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="PtzO0zHh5yg" data-poster="./videos/PalatsetFeb25/BrassfireRoundItGoesPalatsetFeb25.jpg" aria-label="Play Brassfire / Round It Goes - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/BrassfireRoundItGoesPalatsetFeb25.jpg" alt="Brassfire poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Brassfire / Round It Goes - Palatset Feb 25</p>
+                </div>
+
+                <div class="media-item small">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="BIh_2LKN_nQ" data-poster="./videos/PalatsetFeb25/TravelerPalatsetFeb25.jpg" aria-label="Play Traveler - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/TravelerPalatsetFeb25.jpg" alt="Traveler poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Traveler - Palatset Feb 25</p>
+                </div>
+
+                <div class="media-item medium">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="cZcOFDrza24" data-poster="./videos/PalatsetFeb25/FullHeartFancyPalatsetFeb25.jpg" aria-label="Play Full Heart Fancy - Palatset Feb 25">
+                        <img src="./videos/PalatsetFeb25/FullHeartFancyPalatsetFeb25.jpg" alt="Full Heart Fancy poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Full Heart Fancy - Palatset Feb 25</p>
+                </div>
+            </div>
+        </div>
+
+        <h2>Audio</h2>
+        <div class="audio-player">
+            <p>Dance with Somebody - Live recording wedding 25</p>
+            <audio controls id="audio-player">
+                <source src="./sound/doktorBrollop/DanceWithSomebody.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <script>
+            // YouTube placeholder cards: lazy load thumbnails, insert privacy-enhanced iframe on click
+            document.addEventListener('DOMContentLoaded', function() {
+                const THUMB_SIZES = ['maxresdefault','sddefault','hqdefault','mqdefault','default'];
+                const MIN_W = 200, MIN_H = 120;
+
+                function tryLoadThumb(ytid, idx) {
+                    if (idx >= THUMB_SIZES.length) return Promise.reject();
+                    const url = `https://i.ytimg.com/vi/${ytid}/${THUMB_SIZES[idx]}.jpg`;
+                    return new Promise((resolve, reject) => {
+                        const img = new Image();
+                        img.onload = () => {
+                            if (img.naturalWidth >= MIN_W && img.naturalHeight >= MIN_H) resolve(url);
+                            else reject();
+                        };
+                        img.onerror = () => reject();
+                        img.src = url;
+                    }).catch(() => tryLoadThumb(ytid, idx+1));
+                }
+
+                function setCardThumbnail(card) {
+                    const ytid = card.dataset.ytid;
+                    const img = card.querySelector('img');
+                    const localPoster = card.dataset.poster;
+                    if (!ytid) return img.src = localPoster || img.src;
+                    tryLoadThumb(ytid, 0).then(url => img.src = url).catch(() => {
+                        if (localPoster) img.src = localPoster;
+                    });
+                }
+
+                function lockCardSize(card) {
+                    const rect = card.getBoundingClientRect();
+                    card.style.width = rect.width + 'px';
+                    card.style.height = rect.height + 'px';
+                    card.classList.add('is-playing');
+                }
+                function unlockCardSize(card) {
+                    card.style.width = '';
+                    card.style.height = '';
+                    card.classList.remove('is-playing');
+                }
+
+                function ensureYouTubeAPI() {
+                    if (window.YT && window.YT.Player) return Promise.resolve(window.YT);
+                    if (window._ytApiPromise) return window._ytApiPromise;
+                    window._ytApiPromise = new Promise((resolve) => {
+                        const tag = document.createElement('script');
+                        tag.src = 'https://www.youtube.com/iframe_api';
+                        window.onYouTubeIframeAPIReady = function() { resolve(window.YT); };
+                        document.head.appendChild(tag);
+                    });
+                    return window._ytApiPromise;
+                }
+
+                function playInlinePortrait(card, ytid) {
+                    const parent = card.closest('.media-item');
+                    lockCardSize(card);
+                    parent.classList.add('portrait-playing');
+
+                    const iframe = document.createElement('iframe');
+                    iframe.className = 'youtube-iframe';
+                    iframe.setAttribute('allow', 'autoplay; encrypted-media; fullscreen');
+                    const id = 'yt-' + Math.random().toString(36).slice(2,9);
+                    iframe.id = id;
+                    iframe.setAttribute('src', `https://www.youtube-nocookie.com/embed/${ytid}?rel=0&modestbranding=1&autoplay=1&playsinline=1&enablejsapi=1&mute=1`);
+                    // hide poster but keep it in the DOM for restore
+                    const poster = card.querySelector('img');
+                    poster.style.display = 'none';
+                    const playBtn = card.querySelector('.yt-play');
+                    if (playBtn) playBtn.style.display = 'none';
+                    card.appendChild(iframe);
+
+                    const closeBtn = document.createElement('button');
+                    closeBtn.className = 'yt-close-inline';
+                    closeBtn.setAttribute('aria-label', 'Close video');
+                    closeBtn.textContent = '✕';
+                    card.appendChild(closeBtn);
+
+                    ensureYouTubeAPI().then((YT) => {
+                        try {
+                            const player = new YT.Player(id, {
+                                events: {
+                                    onReady: (ev) => { try { ev.target.playVideo(); ev.target.unMute(); } catch(e){} }
+                                }
+                            });
+                        } catch (e) { /* ignore */ }
+                    }).catch(() => {});
+
+                    closeBtn.addEventListener('click', () => {
+                        iframe.remove();
+                        closeBtn.remove();
+                        poster.style.display = '';
+                        if (playBtn) playBtn.style.display = '';
+                        parent.classList.remove('portrait-playing');
+                        unlockCardSize(card);
+                    }, {once:true});
+                }
+
+                function insertIframe(card, ytid) {
+                    // replace poster with iframe (non-portrait cards)
+                    const iframe = document.createElement('iframe');
+                    iframe.className = 'youtube-iframe';
+                    iframe.setAttribute('allow', 'autoplay; encrypted-media; fullscreen');
+                    const id = 'yt-' + Math.random().toString(36).slice(2,9);
+                    iframe.id = id;
+                    iframe.setAttribute('src', `https://www.youtube-nocookie.com/embed/${ytid}?rel=0&modestbranding=1&autoplay=1&enablejsapi=1&mute=1`);
+                    // clear card and insert iframe
+                    card.innerHTML = '';
+                    card.appendChild(iframe);
+                    card.setAttribute('data-playing','1');
+
+                    ensureYouTubeAPI().then((YT) => {
+                        try {
+                            const player = new YT.Player(id, {
+                                events: {
+                                    onReady: (ev) => { try { ev.target.playVideo(); ev.target.unMute(); } catch(e){} }
+                                }
+                            });
+                        } catch (e) { /* ignore */ }
+                    }).catch(() => {});
+                }
+
+                function loadYT(card) {
+                    const ytid = card.dataset.ytid;
+                    if (!ytid) return console.warn('yt card missing id', card);
+                    if (card.closest('.media-item')?.classList.contains('vertical') || card.classList.contains('vertical')) {
+                        // portrait inline play
+                        playInlinePortrait(card, ytid);
+                    } else {
+                        insertIframe(card, ytid);
+                    }
+                }
+
+                function setupCard(card) {
+                    setCardThumbnail(card);
+                    card.addEventListener('click', () => loadYT(card));
+                    card.addEventListener('keydown', (ev) => {
+                        if (ev.key === 'Enter' || ev.key === ' ') { ev.preventDefault(); loadYT(card); }
+                    });
+                }
+
+                // initialize
+                document.querySelectorAll('.yt-card').forEach(setupCard);
+
+                // set audio volume
+                const audio = document.getElementById('audio-player');
+                if (audio) audio.volume = 0.5;
+            });
+        </script>
     </div>
 
     <!-- Footer -->
