--- a/media.html
+++ b/media.html
@@ -58,16 +58,16 @@
         <div class="columns">
             <div class="column">
 
-                <div class="media-item small">
-                    <div class="yt-card" role="button" tabindex="0" data-ytid="0U-TN4yG2RM" data-poster="./thumbnails/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" aria-label="Play Mo'Momo! - Palatset Feb 25">
-                        <img src="./thumbnails/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" alt="Mo'Momo! poster">
+                <div class="media-item large">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="8hWqLl_OINQ" data-poster="./thumbnails/Kulturnatten25/Momomo.png" aria-label="Play Mo'Momo - Kulturnatten 25">
+                        <img src="./thumbnails/Kulturnatten25/MoMomo.png" alt="MoMomo poster">
                         <button class="yt-play" aria-hidden="true" aria-label="Play">
                             <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M8 5v14l11-7z" />
                             </svg>
                         </button>
                     </div>
-                    <p>Mo'Momo! - Palatset Feb 25</p>
+                    <p>Mo'Momo! - Kulturnatten 25</p>
                 </div>
 
                 <div class="media-item small">
@@ -82,7 +82,7 @@
                     <p>Halfway To Hudson - Palatset Feb 25</p>
                 </div>
 
-                <div class="media-item large">
+                <div class="media-item medium">
                     <div class="yt-card" role="button" tabindex="0" data-ytid="ety-yMrYuY0" data-poster="./thumbnails/PalatsetFeb25/LoneDiggerMemoriesPalatsetFeb25.jpg" aria-label="Play Lone Digger / Memories - Palatset Feb 25">
                         <img src="./thumbnails/PalatsetFeb25/LoneDiggerMemoriesPalatsetFeb25.jpg" alt="Lone Digger / Memories poster">
                         <button class="yt-play" aria-hidden="true" aria-label="Play">
@@ -93,7 +93,20 @@
                     </div>
                     <p>Lone Digger / Memories - Palatset Feb 25</p>
                 </div>
+
+                <div class="media-item small">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="yplNsB9NQK4" data-poster="./thumbnails/Kulturnatten25/Sail.jpg" aria-label="Play Sail - Kulturnatten 25 ">
+                        <img src="./thumbnails/Kulturnatten25/Sail.jpg" alt="Sail poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Sail - Kulturnatten 25</p>
+                </div>
             </div>
+            
 
             <div class="column">
 
@@ -119,6 +132,18 @@
                         </button>
                     </div>
                     <p>Kids - Palatset Feb 25</p>
+                </div>
+
+                <div class="media-item medium">
+                    <div class="yt-card" role="button" tabindex="0" data-ytid="0U-TN4yG2RM" data-poster="./thumbnails/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" aria-label="Play Mo'Momo! - Palatset Feb 25">
+                        <img src="./thumbnails/PalatsetFeb25/MoMomoPalatsetFeb25.jpg" alt="Mo'Momo! poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Mo'Momo! - Palatset Feb 25</p>
                 </div>
             </div>
 
@@ -158,16 +183,38 @@
                     </div>
                     <p>Full Heart Fancy - Palatset Feb 25</p>
                 </div>
+
+                <div class="media-item verticalSmall">
+                    <div class="yt-card verticalSmall" role="button" tabindex="0" data-ytid="MBLh4nA7avU" data-poster="./thumbnails/other/bellaCiao.png" aria-label="Play Bella Ciao">
+                        <img src="./thumbnails/other/bellaCiao.png" alt="Bella Ciao poster">
+                        <button class="yt-play" aria-hidden="true" aria-label="Play">
+                            <svg class="yt-play-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <p>Bella Ciao</p>
+                </div>
             </div>
         </div>
 
         <h2>Audio</h2>
-        <div class="audio-player">
-            <p>Dance with Somebody - Live recording wedding 25</p>
-            <audio controls id="audio-player">
-                <source src="./sound/doktorBrollop/DanceWithSomebody.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
+        <div class="audio-table-player">
+            <div class="audio-player">
+                <p>Dance with Somebody - Live recording wedding 25</p>
+                <audio controls id="audio-player">
+                    <source src="./sound/doktorBrollop/DanceWithSomebody.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+
+            <div class="audio-player">
+                <p>Traveler - Rehersal recording</p>
+                <audio controls id="audio-player">
+                    <source src="./sound/TravelerRepApril2025.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
         </div>
         <script>
             // YouTube placeholder cards: lazy load thumbnails, insert privacy-enhanced iframe on click
